force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <pluralLabel>Loan Applications</pluralLabel>
    <nameField>
        <label>Application Number</label>
        <type>AutoNumber</type>
        <displayFormat>LA-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Primary entity representing a mortgage loan application. One application per borrower submission. Immutable once submitted — changes tracked via Decision_Event__c.</description>
</CustomObject>