force-app/main/default/objects/Loan_Application__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <label>Borrower</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Borrowers</relationshipLabel>
    <relationshipName>Borrower_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>