force-app/main/default/objects/Loan_Application__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>INTENT</fullName><default>true</default><label>INTENT</label></value>
            <value><fullName>DOCUMENTS</fullName><default>false</default><label>DOCUMENTS</label></value>
            <value><fullName>REVIEW</fullName><default>false</default><label>REVIEW</label></value>
            <value><fullName>DECISION</fullName><default>false</default><label>DECISION</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>