force-app/main/default/objects/Loan_Application__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CONVENTIONAL</fullName><default>true</default><label>CONVENTIONAL</label></value>
            <value><fullName>FHA</fullName><default>false</default><label>FHA</label></value>
            <value><fullName>VA</fullName><default>false</default><label>VA</label></value>
            <value><fullName>USDA</fullName><default>false</default><label>USDA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>