force-app/main/default/objects/Loan_Application__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PURCHASE</fullName><default>true</default><label>PURCHASE</label></value>
            <value><fullName>REFINANCE</fullName><default>false</default><label>REFINANCE</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>