force-app/main/default/objects/Loan_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DRAFT</fullName><default>true</default><label>DRAFT</label></value>
            <value><fullName>SUBMITTED</fullName><default>false</default><label>SUBMITTED</label></value>
            <value><fullName>IN_REVIEW</fullName><default>false</default><label>IN_REVIEW</label></value>
            <value><fullName>DECIDED</fullName><default>false</default><label>DECIDED</label></value>
            <value><fullName>WITHDRAWN</fullName><default>false</default><label>WITHDRAWN</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>